# module-wrapper

./: pyproject.toml
module_wrapper/: __init__.py
