[tool.poetry]
name = "module-wrapper"
version = "0.3.3"
description = "Module wrapper Python library"
authors = ["Roman Inflianskas <infroma@gmail.com>", "Liam Deacon <liam@antarcticaam.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["module", "wrapper", "proxy", "decorator"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 7 - Inactive"
]
repository = "https://github.com/rominf/module-wrapper"

[tool.poetry.dependencies]
python = { version = "^3.6" }
stdlib_list = { version = "^0.8.0", markers = "python_version <= '3.9'" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
